--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>财税云发票</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="stylesheet" href="/dist/main.css">
@@ -12,7 +12,15 @@
 <body>
     <div id="app">
     </div>
+    <!--微信JSAPI-->
     <!--<script type="text/javascript" src="//res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>-->
+    <!--引入高德地图JSAPI -->
+    <script src="//webapi.amap.com/maps?v=1.3&key=91e296a29d93672ad9e296986e119fff"></script>
+    <!--<script id="amap_main_js" src="webapi.amap.com/maps/main?v=1.3&key=91e296a29d93672ad9e296986e119fff&m=http,map,anip,layers,overlay0,brender,mrender,mouse,vectorlayer,overlay,wgl,sync&vrs=1.3.28.4" type="text/javascript"></script>-->
+    <!--引入UI组件库（1.0版本） -->
+    <!--<script src="//webapi.amap.com/ui/1.0/main.js"></script>-->
+    <!--引入百度地图JSAPI -->
+    <!--<script src="//api.map.baidu.com/api?v=2.0&ak=vPUqM8jBuq9wXxuoKyuBwwmo" type="text/javascript"></script>-->
     <script type="text/javascript" src="/dist/vendors.js"></script>
     <script type="text/javascript" src="/dist/main.js"></script>
 </body>
